@@ -1,3 +1,8 @@
+2008-07-23  David Zeuthen  <davidz@redhat.com>
+
+	* monitor/proxy/gproxyvolumemonitor.c
+	(g_proxy_volume_monitor_finalize): Fix crasher (#544399)
+
 2008-07-22  Matthias Clasen  <mclasen@redhat.com>
 
 	* configure.ac: Post-release bump
